Save LaunchCounts immediately on launch if there were any matches

Writing on every run *is* necessary, or else `LaunchCounts` won't get
updated in a timely matter or at all.

Replace that with simpler logic to save to the config file only if there
were any launches. This also makes the autotest match the actual behavior.

Partially reverts 7cb4ff7e812e670c81a60c2b3f3126290ee74c2e

BUG: 500972
FIXED-IN: 6.17